move language out options, fix + button on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1821,7 +1821,7 @@ input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-sea
 
 .messages__input {
   position: relative;
-  top: 6px;
+  top: 4px;
   width: calc(100% - 50px);
   border: 0;
   background: transparent;
@@ -2441,7 +2441,7 @@ input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-sea
   font-size: 0.85em;
   font-family: "Roboto Condensed";
   padding: 0.75rem 1rem;
-  width: 50%;
+  width: 33.333333%;
   text-align: left;
   border-radius: 5px;
   height: 44px;
@@ -2457,7 +2457,12 @@ input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-sea
 
 .sidebar__option button i {
   margin-right: 8px;
-  font-size: 1em;
+  font-size: 14px;
+}
+
+.sidebar__option button svg {
+  margin-right: 8px;
+  fill: #f5f5f5;
 }
 
 .sidebar__toggle {
@@ -3606,7 +3611,7 @@ body.body_fz_18 {
 
   .btn__attach {
     font-size: 1rem;
-    width: 30px;
+    width: 45px;
   }
 
   .--load-mess {
@@ -3654,14 +3659,22 @@ body.body_fz_18 {
     display: none;
   }
 
-  #frame .sidebar .sidebar__option button i {
+  #frame .sidebar .sidebar__option button i,
+  #frame .sidebar .sidebar__option button svg {
     margin: 0;
     position: relative;
     top: 2px;
+    font-size: 18px;
+  }
+
+  #frame .sidebar .sidebar__option button svg {
+    top: -2px;
+    width: 18px;
+    height: 18px;
   }
 
   #frame .contacts {
-    height: calc(100% - 248px);
+    height: calc(100% - 288px);
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;
   }
@@ -3712,19 +3725,9 @@ body.body_fz_18 {
     align-items: center;
   }
 
-  #frame.indent .sidebar .sidebar__option button i {
-    margin-right: 7px;
-  }
-
   #frame.indent .sidebar .sidebar__option button {
-    font-size: 0.85em;
-    width: 50%;
-    text-align: left;
+    width: 33.333%;
     height: 36px;
-  }
-
-  #frame.indent .sidebar .sidebar__option button span {
-    display: inline;
   }
 
   #frame.indent .sidebar-collapse-btn span {
@@ -3844,6 +3847,16 @@ body.body_fz_18 {
   }
 }
 
+@media (max-width: 1099px) {
+  .sidebar__option button {
+    text-align: center;
+  }
+
+  .sidebar__option button span {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 767px) {
   #frame.indent .content {
     width: calc(100% - 70px);
@@ -3874,8 +3887,18 @@ body.body_fz_18 {
     width: 70px;
     text-align: center;
     border-radius: 0;
-    font-size: 1.4rem;
-    height: auto;
+  }
+
+  #frame.indent .sidebar .sidebar__option button i {
+    font-size: 18px;
+  }
+
+  #frame.indent .sidebar .sidebar__option button svg {
+    width: 18px;
+    height: 18px;
+    margin: 0;
+    position: relative;
+    top: -1px;
   }
 
   #frame.indent .sidebar .sidebar__option button span {
@@ -3889,7 +3912,7 @@ body.body_fz_18 {
   }
 
   #frame.indent .contacts {
-    height: calc(100% - 282px);
+    height: calc(100% - 300px);
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;
   }
@@ -3924,11 +3947,11 @@ body.body_fz_18 {
   .sidebar .profile,
   .sidebar-collapse-btn,
   .sidebar__option {
-    width: 350px;
+    width: 390px;
   }
 
   .content {
-    width: calc(100% - 350px);
+    width: calc(100% - 390px);
   }
 }
  
